PersonalDevOrg/force-app/main/default/objects/Aws_Setting__mdt/Aws_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Aws Setting</label>
    <pluralLabel>Aws Settings</pluralLabel>
</CustomObject>