PersonalDevOrg/force-app/main/default/objects/Aws_Setting__mdt/fields/AWS_Access_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>AWS_Access_Key_Id__c</fullName>
    <label>AWS_Access_Key_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>