PersonalDevOrg/force-app/main/default/objects/Aws_Setting__mdt/fields/AWS_Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Secret_Access_Key__c</fullName>
    <label>AWS_Secret_Access_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>