PersonalDevOrg/force-app/main/default/objects/Aws_Setting__mdt/fields/S3_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>S3_Region_Name__c</fullName>
    <label>S3_Region_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>